# compiler

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql-analysis.yml
ast/: CMakeLists.txt
ast/include/: ast.h  astdeserializer.h  astnode.h  astserializer.h
ast/src/: ast.cpp  astdeserializer.cpp  astserializer.cpp
backend/: CMakeLists.txt
backend/include/: lexer.h  parser.h  preprocessor.h  stringvec.h  token.h  tokenlist.h
backend/include/tokens/: basetoken.h
backend/src/: lexer.cpp  parser.cpp  preprocessor.cpp  stringvec.cpp  tokenlist.cpp
compiler/: CMakeLists.txt
compiler/include/: compiler.h
compiler/src/: compiler.cpp  main.cpp
docs/: scheme.docx
interpreter/: CMakeLists.txt
interpreter/include/: interpreter.h
interpreter/src/: main.cpp
